2004-10-07  David Malcolm  <dmalcolm@redhat.com>

	* plugin-fo.c:

	Remove reference to fo.h

	* cong-util.c: 

	Remove reference to fo.h

	* Makefile.am: 

	Remove the fo files; they were a failed experiment; the plan is to
	eventually replace this	"functionality" with xmlroff

	* fo.h, fo-parser-result.c, fo-print-context.c, fo-rect.c,
	fo-solver-result.c, fo-tests.c:

	Remove from CVS

2004-10-07  Geert Stappers  <stappers@stappers.nl>

	* Makefile.am:

	Distribute the tarball also with the printing sources.

2004-09-30  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 

	Fix a crash in cong_document_get_language_for_node when called on
	a text node inside an entity declaration.

2004-09-28  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-parser-error.c: 

	Use selection/single-click rather than double-click for moving
	between the parser errors; highlight the line containing the error
	when an error is selected.

2004-09-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-node-properties-dialog.c: 

	Changed "OK" to "Close", since the dialog is instant-apply

2004-09-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c: 

	The status bar now displays the XPath of the selected node

	* cong-text-cache.c: 

	Allow NULL attr_list, since this is required by CongEditorNodeComment

	* cong-primary-window.c: 

	Cleanup of statusbar updating

2004-09-22  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-primary-window.h

	Removed unused fields from CongPrimaryWindow

2004-09-20 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-text-cache.c:

	Fix warnings about conversion from stripped text to original	
 
2004-09-09  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-edit-find-and-replace.c: 

	Added some bulletproofing to the "find previous" routine, for the case
	where the cursor no longer exists

2004-08-31  Douglas Burke <dburke@cfa.harvard.edu>
 
	* cong-attribute-editor-enumeration.c
